@startuml 10-Application-Content-Slice
!theme plain
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

title Diagrama 10 - Aplicação - Contexto "Conteúdo"

interface IUseCase {
  + execute(request): response
}

package "Use Cases" {
  class CreateContentUseCase {
    - content_repo: IContentRepo
    - psychologist_repo: IPsychologistRepo
    --
    + execute(request): ContentDTO
  }
  
  class UpdateContentUseCase {
    - content_repo: IContentRepo
    --
    + execute(request): ContentDTO
  }
  
  class GetContentsUseCase {
    - content_repo: IContentRepo
    --
    + execute(request): Page
  }
  
  class GetContentByIdUseCase {
    - content_repo: IContentRepo
    --
    + execute(request): ContentDTO
  }
  
  class DeleteContentUseCase {
    - content_repo: IContentRepo
    --
    + execute(request): bool
  }
}

package "Repository Interfaces (Ports)" {
  interface IContentRepo {
    + create(entity): Content
    + update(entity): Content
    + get(pageable, filters): Page
    + get_by_id(id): Content
    + delete(id): bool
  }
  
  interface IPsychologistRepo {
    + get_by_id(id): Psychologist
  }
}

package "DTOs" {
  class ContentDTO {
    + id: str
    + title: str
    + body: str
    + author: AuthorDTO
    + created_at: str
    --
    + from_entity(content): ContentDTO
  }
  
  class AuthorDTO {
    + id: str
    + name: str
    + crp: str
  }
}

package "Common" {
  class Pageable {
    + page: int
    + size: int
  }
  
  class Page {
    + items: list
    + total: int
    + page: int
    + size: int
    + pages: int
  }
}

package "Domain" {
  class Content
  class Psychologist
}

' Implementações de interface (linha tracejada)
CreateContentUseCase ..|> IUseCase
UpdateContentUseCase ..|> IUseCase
GetContentsUseCase ..|> IUseCase
GetContentByIdUseCase ..|> IUseCase
DeleteContentUseCase ..|> IUseCase

' Dependências
CreateContentUseCase ..> IContentRepo
CreateContentUseCase ..> IPsychologistRepo
CreateContentUseCase ..> ContentDTO

UpdateContentUseCase ..> IContentRepo
UpdateContentUseCase ..> ContentDTO

GetContentsUseCase ..> IContentRepo
GetContentsUseCase ..> Pageable
GetContentsUseCase ..> Page
GetContentsUseCase ..> ContentDTO

GetContentByIdUseCase ..> IContentRepo
GetContentByIdUseCase ..> ContentDTO

DeleteContentUseCase ..> IContentRepo

ContentDTO ..> Content : maps from
ContentDTO *-- AuthorDTO
AuthorDTO ..> Psychologist : maps from


@enduml
